syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

import "LogicServer.proto";

message ExerciseObj {
    int32 Id = 1;
    string Name = 2;
    string Description = 3;
    int32 Duration = 4;
}

message Exercises {
    repeated ExerciseObj exercises = 1;
}

service ExerciseService {
    rpc CreateExercise(ExerciseObj) returns(ExerciseObj);
    rpc GetExercises(StringObj) returns(Exercises);
    rpc EditExercise(ExerciseObj) returns(StringObj);
    rpc DeleteExercise(IntObj) returns(StringObj);
}